--- a/package.json
+++ b/package.json
@@ -34,9 +34,11 @@
     ]
   },
   "devDependencies": {
+    "@types/classnames": "^2.2.9",
     "@typescript-eslint/eslint-plugin": "^2.13.0",
     "@typescript-eslint/parser": "^2.13.0",
     "autoprefixer": "^9.7.3",
+    "classnames": "^2.2.6",
     "eslint-config-prettier": "^6.8.0",
     "eslint-plugin-prettier": "^3.1.2",
     "eslint-plugin-react": "^7.17.0",
