--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -14,7 +14,7 @@
   "plugins": ["@typescript-eslint", "react"],
   "rules": {
     //   "indent": "off",
-    //   "@typescript-eslint/no-explicit-any": "off",
+    "@typescript-eslint/no-explicit-any": "off",
     "@typescript-eslint/explicit-function-return-type": "off",
     "react/prop-types": 0
   },
